@@ -266,6 +266,7 @@ div.lms-ui-multiselectlayer {
 	padding: 0px 0px;
 	margin-top: 0;
 	margin-bottom: 0;
+	.lms-ui-no-user-select;
 	.box1 {
 		background-color: @dark;
 		color: #000000;
