@@ -1,0 +1,74 @@
+<div id="pageleftbar">
+	<table width="100%">
+		<tr>
+			<td class="text-center valign-top bottomline">
+				<br>
+				<img src="{ConfigHelper::getConfig('phpui.logo', 'img/logo-40.png')}" alt="LMS {$layout.lmsv}"><br>
+				<span class="bold">LMS {$layout.lmsv}</span><br>
+				&nbsp;<br>
+			</td>
+		</tr>
+	</table>
+	<table id="main-menu" class="click-menu" cellpadding="0" cellspacing="0">
+		{foreach $newmenu as $menuindex => $menuitem}
+		<tr id="menu-{$menuindex}">
+			<td class="click-menu bottomline">
+			<div{if $menuitem.tip} {tip class="tip" text="\$a" a=$menuitem.tip bold=1}{else} class="tip"{/if}{if ! $menuitem.submenu} onClick="{if $menuitem.windowopen}window.open('{$menuitem.link}'); {else}return self.location.href = '{$menuitem.link}'; {/if}"{/if}>
+				<div class="box1">
+					<img src="img/{$menuitem.img}" alt="*" style="position: absolute">
+					<span style="margin-left: 21px">{$menuitem.name}</span>
+				</div>
+			</div>
+			<div class="section">
+				{if $menuitem.submenu}
+				{foreach from=$menuitem.submenu item=submenuitem}
+				<div{if $submenuitem.tip} {tip class="tip" text="\$a" a=$submenuitem.tip bold="1"}{else} class="tip"{/if}>
+					<div class="box2"><a href="{$submenuitem.link|replace:"&":"&amp;"}">{$submenuitem.name}</a></div>
+				</div>
+				{/foreach}
+				{/if}
+				</div>
+			</td>
+		</tr>
+		{/foreach}
+		<tr id="menu-logout">
+			<td class="click-menu bottomline">
+				<div {tip class="tip" text="Allows you to logout" bold=1} onClick="if (confirm('{trans("Are you sure that you want to logout?")}')) { return self.location.href='?m=logout&amp;is_sure=1'; } ">
+					<div class="box1">
+						<img src="img/logout.gif" alt="*" style="position: absolute">
+						<span class="nobr" style="margin-left: 21px">{trans("Logout")} {$layout.logname|truncate:10:"..."}</span>
+					</div>
+				</div>
+			</td>
+		</tr>
+	</table>
+	<table width="100%">
+		<tr>
+			<td class="text-center bold nobr" style="font-size: 7pt;">
+				LMS {$layout.lmsv}<br>{if $layout.lmsvr}({$layout.lmsvr})<br>{/if}
+				DB: {$layout.dbschversion}<br>@ {$layout.hostname}&nbsp;<br>&nbsp;<br>
+			</td>
+		</tr>
+	</table>
+	<script type="text/javascript">
+		var mainMenu = new ClickShowHideMenu({
+			id: 'main-menu',
+			maxOpened: {intval(ConfigHelper::getConfig('phpui.max_opened_menus', 3))}
+		});
+		mainMenu.init();
+
+		$('#main-menu').sortable({
+			items: "tr",
+			handle: "img",
+			axis: "y",
+			opacity: 0.9,
+			update: function(event, ui) {
+				data = {};
+				data['main-menu-order'] = $(this).sortable("toArray").join(';');
+				savePersistentSettings(data);
+			}
+		});
+
+		restoreSortable('main-menu', '{$main_menu_sortable_order}');
+	</script>
+</div>
