@@ -115,6 +115,7 @@ version ?.??.?? (????-??-??):
     tinymce toggle feature [chilan]
   - many items can be opened in menu at the same time - phpui.max_opened_menus
     (default: 3; 0 means unlimited) configuration variable controls this [chilan]
+  - main menu items are sortable by draging menu icon and dropping it in another place [chilan]
 
 version 1.11.20 (2016-04-19):
 
